ingresscontrol.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ilab-ingress-stable
  namespace: ilab
spec:
  rules:
  - host: ilab.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: ilab-svc-stable
          servicePort: 80
