ingresscontrolstage.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ilab-ingress-stage
  namespace: ilab
spec:
  rules:
  - host: ilabstage.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: ilab-svc-stage
          servicePort: 80
